@@ -589,6 +589,7 @@ Use the C23 version of the C language.
 Adds support for
 \f(CW_BitInt\fP,
 \f(CWchar8_t\fP,
+\f(CWconstexpr\fP,
 \f(CW[[deprecated]]\fP,
 \f(CW[[maybe_unused]]\fP,
 and
