@@ -1,3 +1,3 @@
 declare x as consteval int
              ^
-14: error: "consteval": unsupported keyword in C
+14: error: "consteval": unsupported keyword in C; did you mean "constexpr"?
