@@ -1,0 +1,3 @@
+declare x as constexpr int
+             ^
+14: error: "constexpr": unsupported keyword until C23
