@@ -1,3 +1,1 @@
-explain constexpr int x
-        ^
-9: error: "constexpr": unsupported keyword in C
+declare x as constant expression int
