@@ -1,0 +1,3 @@
+explain constexpr int x
+        ^
+9: error: "constexpr": unsupported keyword until C23
