@@ -1,0 +1,3 @@
+explain constexpr volatile int x
+        ^
+9: error: constexpr volatile is illegal in C
