@@ -1,4 +1,4 @@
-EXPECTED_EXIT=65
+EXPECTED_EXIT=0
 cdecl <<END
 declare x as constexpr int
 END
